# ppo-grpo-opd-long-horizon

./: .gitignore  LICENSE  PAPER.md  README.md  pyproject.toml
autoresearch/: README.md  closed_loop_credit_training_config.json  coverage_gated_credit_spec.json
docs/: research-roadmap.md
experiments/: __init__.py  anchor_coverage_audit.py  closed_loop_credit_training.py  credit_phase_diagram.py  deep_matrix.py  length_imbalance_audit.py  neural_credit_generalization.py  policy_gradient_fidelity.py  scenario_sweep.py  selection_regret.py  sequence_policy_training.py  token_cost_sensitivity.py  toy_credit_assignment.py  variance_credit_grid.py
paper/: README.md  main.tex  references.bib
public/: README.md  artifact_manifest.json  latex_artifact_manifest.json  paper_manifest.json  ppo_grpo_opd_long_horizon.docx
results/: README.md  anchor_coverage_audit_seedset.json  anchor_coverage_audit_seedset.md  closed_loop_credit_training_10seed.json  closed_loop_credit_training_10seed.md  closed_loop_credit_training_low_coverage_10seed.json  closed_loop_credit_training_low_coverage_10seed.md  credit_phase_diagram_seedset.json  credit_phase_diagram_seedset.md  deep_matrix_20seed.csv  deep_matrix_20seed.json  deep_matrix_20seed.md  length_imbalance_audit_seedset.json  length_imbalance_audit_seedset.md  neural_credit_generalization_seedset.json  neural_credit_generalization_seedset.md  policy_gradient_fidelity_seed13.json  policy_gradient_fidelity_seed13.md  selection_regret_seedset.json  selection_regret_seedset.md  sequence_policy_training_seedset.json  toy_sweep_seed11.json  (+6 more)
(+26 files in other folders)
