[project]
name = "ppo-grpo-opd-long-horizon"
version = "0.1.0"
description = "Trajectory-reward versus token-credit experiments for PPO, GRPO, OPD/OPSD, and long-horizon post-training."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Limes Labs" }
]
dependencies = []

[tool.setuptools]
packages = ["experiments"]
