[project]
name = "the-broadcast-ceiling"
version = "0.1.0"
description = "Broadcast-ceiling and exact-gradient audits for long-horizon RL advantage estimators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Limes Labs" }
]
dependencies = []

[tool.setuptools]
packages = ["experiments"]
